--- a/src/main/resources/templates/profile_view.html
+++ b/src/main/resources/templates/profile_view.html
@@ -25,10 +25,15 @@
       width: 90%;
       border-spacing: 0px 20px;
     }
+    .task_tr:hover{
+      transform: scale(1.05);
+      box-shadow: 5px 5px 8px #222222;
+    }
     .task_tr {
       width: 95%;
       height: 150px;
       color: rgb(255, 255, 255);
+      transition: all .2s ease-in-out;
     }
     .task_td:hover {
       cursor: pointer;
