--- a/src/main/resources/templates/task_view.html
+++ b/src/main/resources/templates/task_view.html
@@ -297,7 +297,7 @@
   <a th:href="@{/tasks}" href="task_search.html" style=" text-decoration: underline; position: absolute; left: 0; margin-left: 15px; ">< Back</a>
 </div>
 
-<div id="popup1" class="overlay" tabindex="1000" style=" z-index: 9999; ">
+<div id="popup1" class="overlay" tabindex="1000" style=" z-index: 9999; " sec:authorize="hasAnyAuthority('client', 'admin')">
   <form action="#" th:action="@{/task_view/{taskId}/change_info(taskId=${task.getId()})}" method="post">
     <div class="popup">
       <h2>Change Task Info</h2>
