--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -14,7 +14,7 @@
     <div id="pageMessages"></div>
   <div style=" font-size: 25px; ">
     <div style=" padding-top: 25px; margin-left: 10px; ">
-      <a class="icon" href="https://github.com/yixiatros/ergasia_omadas_5/tree/master"><ion-icon name="logo-github"></ion-icon></a>
+      <a class="icon" href="https://github.com/"><ion-icon name="logo-github"></ion-icon></a>
       <a class="icon" href="https://www.facebook.com/"><ion-icon name="logo-facebook"></ion-icon></a>
       <a class="icon" href="https://www.instagram.com/"><ion-icon name="logo-instagram"></ion-icon></a>
       <a class="icon" href="https://twitter.com/"><ion-icon name="logo-twitter"></ion-icon></a>
@@ -114,7 +114,7 @@
 <footer id="footer" class="footer" th:fragment="footer">
     <div style=" font-size: 30px; margin-top: 10px ">CodeTask</div>
     <div style=" font-size: 20px; padding-top: 10px; ">
-        <a class="icon" href="https://github.com/yixiatros/ergasia_omadas_5/tree/master"><ion-icon name="logo-github"></ion-icon></a>
+        <a class="icon" href="https://github.com/"><ion-icon name="logo-github"></ion-icon></a>
         <a class="icon" href="https://www.facebook.com/"><ion-icon name="logo-facebook"></ion-icon></a>
         <a class="icon" href="https://www.instagram.com/"><ion-icon name="logo-instagram"></ion-icon></a>
         <a class="icon" href="https://twitter.com/"><ion-icon name="logo-twitter"></ion-icon></a>
