--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -135,14 +135,14 @@
 
 <footer id="footer" th:replace="~{fragments :: footer}"></footer>
 
-<script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
-<script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
+<script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script> <!-- link-icons scirpt -->
+<script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script> <!-- link-icons scirpt -->
 
-<script src='//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
-<script src='//maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js'></script><script  src="./script.js"></script>
-<script th:src="@{/js/application.js}" src="../static/js/application.js"></script>
+<script src='//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script> <!-- ALERT -->
+<script src='//maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js'></script> <!-- ALERT -->
+<script th:src="@{/js/application.js}" src="../static/js/application.js"></script> <!-- ALERT -->
 
-<script>
+<script> <!-- index redirection -->
     function hireNow(){
         window.location.href = "tasks";
     }
